--- a/hello-service-external-secret.yml
+++ b/hello-service-external-secret.yml
@@ -5,5 +5,5 @@ metadata:
 secretDescriptor:
   backendType: systemManager
   data:
-    - key: /hello-service/password
+    - key: /hello/password
       name: password
