--- a/external-dns.yaml
+++ b/external-dns.yaml
@@ -3,6 +3,8 @@ kind: ServiceAccount
 metadata:
   name: external-dns
   namespace: kube-system
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::822997939312:role/kube-external-dns
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -65,13 +67,14 @@ spec:
     metadata:
       labels:
         app: external-dns
-      annotations:
-        iam.amazonaws.com/role: arn:aws:iam::822997939312:role/external-dns
+      #annotations:
+      #  iam.amazonaws.com/role: arn:aws:iam::822997939312:role/external-dns
+    spec:
     spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.9
+        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.17
         args:
         - --source=service
         - --source=ingress
@@ -80,3 +83,5 @@ spec:
         - --policy=sync
         - --registry=txt
         - --txt-owner-id=ZD3IZM0RVSMC2
+      securityContext:
+        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes and AWS token files
