--- a/external-secrets.yml
+++ b/external-secrets.yml
@@ -40,6 +40,8 @@ kind: ServiceAccount
 metadata:
   name: kubernetes-external-secrets-service-account
   namespace: kubernetes-external-secrets
+  #annotations:
+  #  eks.amazonaws.com/role-arn: arn:aws:iam::822997939312:role/kube-external-secrets
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
@@ -59,11 +61,11 @@ spec:
         name: kubernetes-external-secrets
         service: kubernetes-external-secrets
       annotations:
-        iam.amazonaws.com/role: arn:aws:iam::822997939312:role/external-secrets
+        iam.amazonaws.com/role: arn:aws:iam::822997939312:role/kube-external-secrets
     spec:
       serviceAccountName: kubernetes-external-secrets-service-account
       containers:
-        - image: "godaddy/kubernetes-external-secrets:1.3.1"
+        - image: "godaddy/kubernetes-external-secrets:1.5.0"
           imagePullPolicy: Always
           name: kubernetes-external-secrets
           env:
