--- a/kube/app/hello-app-nginx-default.conf
+++ b/kube/app/hello-app-nginx-default.conf
@@ -1,8 +1,29 @@
+log_format ltsv 'time:$time_iso8601\t'
+                'remote_addr:$remote_addr\t'
+                'request_method:$request_method\t'
+                'request_length:$request_length\t'
+                'request_uri:$request_uri\t'
+                'https:$https\t'
+                'uri:$uri\t'
+                'query_string:$query_string\t'
+                'status:$status\t'
+                'bytes_sent:$bytes_sent\t'
+                'body_bytes_sent:$body_bytes_sent\t'
+                'referer:$http_referer\t'
+                'useragent:$http_user_agent\t'
+                'forwardedfor:$http_x_forwarded_for\t'
+                'request_time:$request_time\t'
+                'upstream_response_time:$upstream_response_time';
+
 server {
   listen 80 default_server;
   server_name _;
+  access_log /var/log/nginx/access.log ltsv;
 
   location / {
     proxy_pass http://hello-app:3000/;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $http_x_forwarded_proto;
   }
 }
